Removes a few dead links.

--- a/_posts/2008-09-25-microsoft-pdc-2008.md
+++ b/_posts/2008-09-25-microsoft-pdc-2008.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Microsoft PDC 2008!"
 date:   2008-09-25
-categories: events
+categories: technology
 ---
 
 October 27 – 30 I will be attending [Microsoft Professional Developer Conference 2008][1] in Los Angeles, USA.
