Corrects wrong branch name in the Git undo post.

--- a/_posts/2016-08-25-git-undo.md
+++ b/_posts/2016-08-25-git-undo.md
@@ -128,7 +128,7 @@ As you can see, everything went fine — but we're still not happy. For some rea
 
     git undo 2
 
-This moves `HEAD` to the commit referenced by `feature@{2}` — that is the commit the `feature` branch was pointing to _2 reflog entries ago_. Let's go ahead and check our history again:
+This moves `HEAD` to the commit referenced by `master@{2}` — that is the commit the `master` branch was pointing to _2 reflog entries ago_. Let's go ahead and check our history again:
 
 <a href="{{ site.url }}/assets/{{ page.assets }}/git-lg-restored.png">
 <img src="{{ site.url }}/assets/{{ page.assets }}/git-lg-restored.png"
