Improves the readibility of the Git Undo post.

--- a/_posts/2016-08-25-git-undo.md
+++ b/_posts/2016-08-25-git-undo.md
@@ -92,7 +92,7 @@ I realize it's quite a mouthful so let's break it down piece by piece:
 Here, we're defining the alias as a _shell function_ named `f` which is then invoked immediately.
 
 2. `$(git rev-parse --abbrev-ref HEAD)@{...}`<br/>
-We use the [`git rev-parse`][rev-parse-doc] command followed by the `--abbrev-ref` option to get the name of the current branch reference, which we then concatenate with `@{...}` to form the reference to a previous position in the reflog (e.g. `master@{1}`).
+We use the [`git rev-parse`][rev-parse-doc] command followed by the `--abbrev-ref` option to get the name of the current branch, which we then concatenate with `@{...}` to form the reference to a previous position in the reflog (e.g. `master@{1}`).
 
 3. `${1-1}`<br/>
 We specify the position in the reflog as the first parameter `$1` with a default value of `1`. This is the whole reason why we defined the alias as a shell function: to be able to provide a default value for the parameter using the standard [Bash syntax](http://www.gnu.org/software/bash/manual/bashref.html#Shell-Parameter-Expansion).
@@ -110,7 +110,7 @@ Let's say that we have a history that looks like this:[^3]
      class="screenshot" />
 </a>
 
-We have two branches — `master` and `feature` — that have diverged at commit `C`. For the sake of our example, let's also say that we wanted to remove the latest commit in `master` — that is commit `F` — and then merge the `feature` branch:
+We have two branches — `master` and `feature` — that have diverged at commit `C`. For the sake of our example, let's also assume that we wanted to remove the latest commit in `master` — that is commit `F` — and then merge the `feature` branch:
 
     git reset --hard HEAD^
     git merge feature
