Makes the section titles H3 instead of H2.

--- a/_posts/2016-08-25-git-undo.md
+++ b/_posts/2016-08-25-git-undo.md
@@ -10,7 +10,7 @@ Tell me if you recognize this scenario: you're in the middle of [rewriting your 
 
 It was in one of those moments of despair that I finally decided to set out to create my own `git undo` command. Here's what I came up with and how I got there.
 
-## The Reflog
+### The Reflog
 
 My story of undoing things in Git starts with the reflog. _What's the reflog_, you might ask. Well, I'm here to tell you: every time a [_branch reference_](https://git-scm.com/book/en/v2/Git-Internals-Git-References) moves[^1] Git records its previous value in a sort of local journal. This journal is the called the _reference log_ — or [reflog][reflog-doc] for short.
 
@@ -61,7 +61,7 @@ If we, instead, wanted to look at the commit `master` was referencing just _befo
 
     git show master@{1}
 
-## The Undo Alias
+### The Undo Alias
 
 Here's my point: the [reflog][reflog-doc] keeps track of the history of commits referenced by a branch, just like a web browser keeps track of the history of URLs we visit.
 
@@ -99,7 +99,7 @@ We specify the position in the reflog as the first parameter `$1` with a default
 
 The beauty of using an optional parameter like this, is that it allows us to undo any number of operations. At the same time, if we don't specify anything, it's going to undo the just latest one.
 
-## Trying It Out
+### Trying It Out
 
 Let's say that we have a history that looks like this:[^3]
 
