--- a/_posts/2016-08-25-git-undo.md
+++ b/_posts/2016-08-25-git-undo.md
@@ -4,6 +4,9 @@ title: Git Undo
 date: 2016-08-25
 categories: programming
 assets: git-undo
+excerpt: "Tell me if you recognize this scenario: you’re in the middle of rewriting your local commits when you suddenly realize that you have gone too far and, after one too many rebases, you are left with a history that looks nothing like the way you wanted. No? Well, I certainly do. It was in one of those moments of despair that I finally decided to set out to create my own <code>git undo</code> command. Here’s what I came up with and how I got there."
+image: http://megakemp.com/assets/git-undo/git-logo.png
+ranking: 3
 ---
 
 Tell me if you recognize this scenario: you're in the middle of [rewriting your local commits](http://megakemp.com/2014/08/14/the-importance-of-a-good-looking-history) when you suddenly realize that you have gone too far and, after one too many rebases, you are left with a history that looks nothing like the way you wanted. No? Well, I certainly do. And when that happens, I wish I could just <kbd>CTRL</kbd>+<kbd>Z</kbd> my way back to where I started. Of course, it's never that simple — not even in [a GUI](https://vimeo.com/171317261).
