Makes all links to 'megakemp.com' root-relative

--- a/_posts/2016-08-25-git-undo.md
+++ b/_posts/2016-08-25-git-undo.md
@@ -9,7 +9,7 @@ image: git-logo.png
 ranking: 3
 ---
 
-Tell me if you recognize this scenario: you're in the middle of [rewriting your local commits](http://megakemp.com/2014/08/14/the-importance-of-a-good-looking-history) when you suddenly realize that you have gone too far and, after one too many rebases, you are left with a history that looks nothing like the way you wanted. No? Well, I certainly do. And when that happens, I wish I could just <kbd>CTRL</kbd>+<kbd>Z</kbd> my way back to where I started. Of course, it's never that simple — not even in [a GUI](https://vimeo.com/171317261).
+Tell me if you recognize this scenario: you're in the middle of [rewriting your local commits](/2014/08/14/the-importance-of-a-good-looking-history) when you suddenly realize that you have gone too far and, after one too many rebases, you are left with a history that looks nothing like the way you wanted. No? Well, I certainly do. And when that happens, I wish I could just <kbd>CTRL</kbd>+<kbd>Z</kbd> my way back to where I started. Of course, it's never that simple — not even in [a GUI](https://vimeo.com/171317261).
 
 It was in one of those moments of despair that I finally decided to set out to create my own `git undo` command. Here's what I came up with and how I got there.
 
@@ -157,7 +157,7 @@ Did you find this useful? If you're interested in learning other techniques like
 
 [^1]: That is, it's _modified_ to point to a different commit than it did before.
 [^2]: You can also use _dates_ here. Try for example `master@{yesterday}` or `HEAD@{2.days.ago}` — pretty amazing, don't you think?
-[^3]: I like my history succinct and colorful. For this reason, I never use the plain `git log`; instead, I define an alias called `lg` where I use the `--pretty` option to [customize its output](https://git-scm.com/docs/pretty-formats). If you want to know more, I wrote about this a while ago when talking about the [importance of a good-looking history](http://megakemp.com/2014/08/14/the-importance-of-a-good-looking-history).
+[^3]: I like my history succinct and colorful. For this reason, I never use the plain `git log`; instead, I define an alias called `lg` where I use the `--pretty` option to [customize its output](https://git-scm.com/docs/pretty-formats). If you want to know more, I wrote about this a while ago when talking about the [importance of a good-looking history](/2014/08/14/the-importance-of-a-good-looking-history).
 
 [reflog-doc]: https://git-scm.com/docs/git-reflog
 [alias-doc]: https://git-scm.com/book/en/v2/Git-Basics-Git-Aliases
