Assigns the appropriate tag to all Git posts

--- a/_posts/2016-08-25-git-undo.md
+++ b/_posts/2016-08-25-git-undo.md
@@ -2,7 +2,7 @@
 layout: post
 title: Git Undo
 date: 2016-08-25
-categories: programming
+categories: git
 assets: git-undo
 excerpt: "Tell me if you recognize this scenario: you’re in the middle of rewriting your local commits when you suddenly realize that you have gone too far and, after one too many rebases, you are left with a history that looks nothing like the way you wanted. No? Well, I certainly do. It was in one of those moments of despair that I finally decided to set out to create my own <code>git undo</code> command. Here’s what I came up with and how I got there."
 image: git-logo.png
