--- a/_posts/2016-08-25-git-undo.md
+++ b/_posts/2016-08-25-git-undo.md
@@ -151,7 +151,7 @@ which, without argument, is the equivalent of saying `git undo 1`.
 <div class="note">
 <p>
 <i class="fa fa-play-circle-o fa-2x pull-left pull-left-three-lines"></i>
-Did you find this useful? If you're interested in learning other techniques like the one described in this article, I wrote down a few more in my <a href="http://bit.ly/ps-enrico-campidoglio">Pluralsight</a> course <a href="http://bit.ly/git-tips-tricks">Advanced Git Tips and Tricks</a>.
+Did you find this useful? If you're interested in learning other techniques like the one described in this article, I wrote down a few more in my <a href="https://www.pluralsight.com/authors/enrico-campidoglio">Pluralsight</a> course <a href="https://www.pluralsight.com/courses/git-tips-tricks">Git Tips and Tricks</a>.
 </p>
 </div>
 
